Fixed second scrollbar

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -1423,7 +1423,7 @@ a.additional-player-stat:hover{
 
 #basic_stats{
     width: 100%;
-    padding: 30px;
+    padding: 30px 30px 40px 30px;
     box-sizing: border-box;
     background-color: rgba(0,0,0,0.3);
 }
